2008-03-12  Juri Linkov  <juri@jurta.org>

	* help.el (describe-project): Remove defaliases for view-todo and
	describe-project that are now unnecessary after the merge from
	emacs--rel--22 that added define-obsolete-function-alias.

	* startup.el (inhibit-startup-screen): Revert incomplete
	2008-03-10 merge from emacs--rel--22 that partly reverted
	2008-02-28 change that added initial message to *scratch* buffer
	regardless of the value of `inhibit-startup-screen'.
	Now keep this change in the trunk, but not in the 22 branch.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-setup-completion-buf, quail-help):
	* mail/binhex.el (binhex-decode-region-internal):
	* mail/uudecode.el (uudecode-decode-region-internal):
	* net/dns.el (dns-read-string-name, dns-read, dns-read-type, query-dns):
	* sha1.el (sha1-string-external): Use set-buffer-multibyte rather than
	setting default-enable-multibyte-characters.

	* emulation/viper-util.el (viper-file-remote-p): Remove, unused.

	* comint.el: Fix up indentation and comment style.  Remove `function'.

	* international/mule-cmds.el (reset-language-environment)
	(set-language-environment-nonascii-translation): Don't set-unibyte-charset.

	* doc-view.el: Remove all cb-args, use closures instead.
	(doc-view-sentinel): Merge doc-view-dvi->pdf-sentinel,
	doc-view-ps->pdf-sentinel, and doc-view-pdf->txt-sentinel (which was
	doing an incorrect check).  Update all callers to use the new name.
	(doc-view-doc->txt): Add missing `txt' argument.

2008-03-12  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-current-cache-dir): Set buffer used for
	md5 sum calculation to single-byte.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-new-window-function): Add assertion.
	(doc-view-doc-type): New var.
	(doc-view-convert-current-doc, doc-view-doc->txt): Use it.
	(doc-view-intersection): New fun.
	(doc-view-mode): Use it to set the new var.
